fix: keep back arrow aligned to its container

--- a/project/source/page/css/style.css
+++ b/project/source/page/css/style.css
@@ -629,7 +629,7 @@ a.new-notifications {
 
 .back-navigation {
   display: none;
-  position: fixed;
+  position: absolute;
   padding: 0.5em;
 }
 
